<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:android_custom="http://schemas.android.com/apk/res/com.rtwo.router"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.rtwo.router.MainActivity"
    tools:ignore="MergeRootFrame" >

    <TextView
        android:id="@+id/titleBar"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/title_bar_height"
        android:layout_alignParentTop="true"
        android:background="@drawable/title"
        android:gravity="center"
        android:text="@string/app_name"
        android:textAppearance="@android:style/TextAppearance.Large"
        android:textColor="@android:color/white"
        android:textSize="16sp" />

    <LinearLayout
        android:id="@+id/listArea"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/tvfileManage"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:clickable="true"
            android:drawableLeft="@drawable/simcard_setting"
            android:drawablePadding="10dp"
            android:drawableRight="@drawable/array"
            android:gravity="center_vertical"
            android:padding="6dp"
            android:text="@string/file_manage"
            android:textColor="@android:color/black"
            android:textSize="18dp" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:background="@drawable/line" />

        <TextView
            android:id="@+id/tvfileManage"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:clickable="true"
            android:drawableLeft="@drawable/router_setting"
            android:drawablePadding="10dp"
            android:drawableRight="@drawable/array"
            android:gravity="center_vertical"
            android:padding="6dp"
            android:text="@string/router_setting"
            android:textColor="@android:color/black"
            android:textSize="18dp" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:background="@drawable/line" />

        <TextView
            android:id="@+id/tvfileManage"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:clickable="true"
            android:drawableLeft="@drawable/frame_list_device"
            android:drawablePadding="10dp"
            android:drawableRight="@drawable/array"
            android:gravity="center_vertical"
            android:padding="6dp"
            android:text="@string/sms_contact_manage"
            android:textColor="@android:color/black"
            android:textSize="18dp" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:background="@drawable/line" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@id/listArea"
        android:layout_below="@id/titleBar"
        android:background="@drawable/main_bg"
        android:orientation="vertical" >

        <RelativeLayout
            android:id="@+id/routerArea"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:background="@drawable/main_bg_bottom"
            android:layout_alignParentBottom="true"
            android:orientation="vertical" >

            <View
                android:id="@+id/separater"
                android:layout_width="2dp"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:background="@drawable/line_spe" />

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_alignParentLeft="true"
                android:layout_toLeftOf="@id/separater"
                android:gravity="center" >

                <TextView
                    android:id="@+id/tvSpeed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:text="1"
                    android:textAppearance="@android:style/TextAppearance.Large"
                    android:textColor="@android:color/white"
                    android:textSize="24sp" />

                <LinearLayout
                    android:id="@+id/speedArea"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@id/tvSpeed"
                    android:layout_alignTop="@id/tvSpeed"
                    android:layout_toRightOf="@id/tvSpeed"
                    android:gravity="center_vertical"
                    android:orientation="vertical" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/kb"
                        android:textColor="@android:color/white"
                        android:textSize="10sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/average_net_rate"
                        android:textColor="@android:color/white"
                        android:textSize="10sp" />
                </LinearLayout>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_alignParentRight="true"
                android:layout_toRightOf="@id/separater"
                android:gravity="center" >

                <TextView
                    android:id="@+id/tvRuntime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:text="36"
                    android:textAppearance="@android:style/TextAppearance.Large"
                    android:textColor="@android:color/white"
                    android:textSize="24sp" />

                <LinearLayout
                    android:id="@+id/speedArea"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@id/tvRuntime"
                    android:layout_alignTop="@id/tvRuntime"
                    android:layout_toRightOf="@id/tvRuntime"
                    android:gravity="center_vertical"
                    android:orientation="vertical" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/minute"
                        android:textColor="@android:color/white"
                        android:textSize="10sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/runtime"
                        android:textColor="@android:color/white"
                        android:textSize="10sp" />
                </LinearLayout>
            </RelativeLayout>
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/container2"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_alignParentTop="true"
            android:layout_above="@id/routerArea" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="5dp"
                android:drawableTop="@drawable/right"
                android:gravity="center"
                android:text="@string/all_ok"
                android:textColor="@android:color/white"
                android:background="@drawable/frame_status_circle"
                android:textSize="12sp" />
        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>